; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_pcwd.c_pcwd_get_option_switches.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_pcwd.c_pcwd_get_option_switches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CMD_ISA_SWITCH_SETTINGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pcwd_get_option_switches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcwd_get_option_switches() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i64 (...) @set_command_mode()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i32, i32* @CMD_ISA_SWITCH_SETTINGS, align 4
  %6 = call i32 @send_isa_command(i32 %5)
  store i32 %6, i32* %1, align 4
  br label %7

7:                                                ; preds = %4, %0
  %8 = call i32 (...) @unset_command_mode()
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i64 @set_command_mode(...) #1

declare dso_local i32 @send_isa_command(i32) #1

declare dso_local i32 @unset_command_mode(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
